--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,8 @@
         android:id="@+id/textView1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="WebUrl:"
-        android:textSize="22sp"
+        android:text="  Web Url:"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBaseline_toBaselineOf="@+id/editTextUrl"
         app:layout_constraintEnd_toStartOf="@+id/editTextUrl"
@@ -46,8 +46,8 @@
         android:id="@+id/textView2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Phone No.:"
-        android:textSize="22sp"
+        android:text="  Phone No:"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBaseline_toBaselineOf="@+id/editTextPhone"
         app:layout_constraintEnd_toStartOf="@+id/editTextPhone"
@@ -81,8 +81,8 @@
         android:id="@+id/textView3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Call Log:"
-        android:textSize="22sp"
+        android:text="  Call Log:"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBaseline_toBaselineOf="@+id/callLog_btn"
         app:layout_constraintEnd_toStartOf="@+id/callLog_btn"
@@ -104,8 +104,8 @@
         android:id="@+id/textView4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Gallery:"
-        android:textSize="22sp"
+        android:text="  Gallery:"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBaseline_toBaselineOf="@+id/gallery_btn"
         app:layout_constraintEnd_toStartOf="@+id/gallery_btn"
@@ -127,8 +127,8 @@
         android:id="@+id/textView5"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Camera:"
-        android:textSize="22sp"
+        android:text="  Camera:"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBaseline_toBaselineOf="@+id/camera_btn"
         app:layout_constraintEnd_toStartOf="@+id/camera_btn"
@@ -150,8 +150,8 @@
         android:id="@+id/textView6"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Alarm:"
-        android:textSize="22sp"
+        android:text="  Alarm:"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBaseline_toBaselineOf="@+id/alarm_btn"
         app:layout_constraintEnd_toStartOf="@+id/alarm_btn"
